fixing forms to work on mobile, hiding sponsor form from mobile

--- a/app/assets/stylesheets/create-event-form.css
+++ b/app/assets/stylesheets/create-event-form.css
@@ -1,16 +1,16 @@
 
-#top
-{
-	display:block;
-	margin-top: 1.5em;
-	margin-left: -.7em;
-}
-
 form {
+	position: relative;
+	top: 1em;
+
 	background: white;
+
+	box-shadow: 0px 1px 5px 1px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+	-moz-box-shadow: 0px 1px 5px 1px #ccc;  /* Firefox 3.5 - 3.6 */
+	-webkit-box-shadow: 0px 1px 5px 1px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
 }
 
-#form-description {
+.form-description {
 	position: relative;
 	top: 1em;
 	left: 2em;
@@ -24,7 +24,7 @@ form .hri {
 }
 
 .questions {
-	margin-left: 1em;
+	margin-left: 2em;
 	padding-bottom: 1em;
 }
 
@@ -55,14 +55,6 @@ form .hri {
 	border-radius: 4px;
 	border-color: #CCCCCC;
 	resize: none;
-}
-
-#bottom
-{
-	display:block;
-	margin-top: 0em;
-	margin-bottom: 0em;
-	margin-left: -.7em;
 }
 
 .readonly-input {
